Shadow open-test-reporting